--- a/force-app/main/default/classes/ElementResponseDTO.cls
+++ b/force-app/main/default/classes/ElementResponseDTO.cls
@@ -17,18 +17,6 @@ public class ElementResponseDTO {
             }
         }
 
-        // Constructor with fieldSetName
-        public BaseElementResponseDTO(Id elementresponseId, String fieldSetName) {
-            this.fields = new Map<String, Object>();
-            List<String> fieldsToSelect = (fieldSetName == null) ? getAllFields('ElementResponse__c') : getFieldsFromFieldSet('ElementResponse__c', fieldSetName);
-            String query = 'SELECT ' + String.join(fieldsToSelect, ', ') + ' FROM ElementResponse__c WHERE Id = :elementresponseId LIMIT 1';
-            ElementResponse__c elementresponse = Database.query(query);
-            Map<String, Object> elementresponseFields = elementresponse.getPopulatedFieldsAsMap();
-            for (String fieldName : elementresponseFields.keySet()) {
-                this.fields.put(fieldName, elementresponseFields.get(fieldName));
-            }
-        }
-
         // Converts DTO to ElementResponse__c
         public virtual ElementResponse__c toElementResponse() {
             ElementResponse__c elementresponse = new ElementResponse__c();
@@ -41,7 +29,7 @@ public class ElementResponseDTO {
 
     public class CreateElementResponseDTO extends BaseElementResponseDTO {
         public CreateElementResponseDTO() {
-            super(null, null);  // This will fetch all fields since no field set is specified
+            super();
         }
     }
 
@@ -49,7 +37,7 @@ public class ElementResponseDTO {
         @AuraEnabled public Id id { get; set; }
 
         public UpdateElementResponseDTO() {
-            super(null, null);  // This will fetch all fields since no field set is specified
+            super();
         }
 
         // Include the ElementResponse ID when updating
@@ -58,25 +46,5 @@ public class ElementResponseDTO {
             elementresponse.Id = this.id;
             return elementresponse;
         }
-    }
-
-    // Helper method to get all fields for an object
-    private static List<String> getAllFields(String objectName) {
-        List<String> fieldNames = new List<String>();
-        Map<String, Schema.SObjectField> fieldMap = Schema.getGlobalDescribe().get(objectName).getDescribe().fields.getMap();
-        for (String fieldName : fieldMap.keySet()) {
-            fieldNames.add(fieldName);
-        }
-        return fieldNames;
-    }
-
-    // Helper method to get fields from the Field Set
-    private static List<String> getFieldsFromFieldSet(String objectName, String fieldSetName) {
-        List<String> fieldNames = new List<String>();
-        Schema.FieldSet fieldSet = Schema.getGlobalDescribe().get(objectName).getDescribe().fieldSets.getMap().get(fieldSetName);
-        for (Schema.FieldSetMember f : fieldSet.getFields()) {
-            fieldNames.add(f.getFieldPath());
-        }
-        return fieldNames;
     }
 }
