--- a/force-app/main/default/classes/PageElementRepository.cls
+++ b/force-app/main/default/classes/PageElementRepository.cls
@@ -59,10 +59,30 @@ public class PageElementRepository extends Repository {
 
     public PageElementDTO.BasePageElementDTO findPageElementById(Id pageelementId, String fieldSetName) {
         try {
-            PageElementDTO.BasePageElementDTO pageelementDto = new PageElementDTO.BasePageElementDTO(pageelementId, fieldSetName);
-            return pageelementDto;
+            List<String> fieldsToSelect = (fieldSetName == null) ? getAllFields('PageElement__c') : getFieldsFromFieldSet('PageElement__c', fieldSetName);
+            String query = 'SELECT ' + String.join(fieldsToSelect, ', ') + ' FROM PageElement__c WHERE Id = :pageelementId LIMIT 1';
+            PageElement__c pageelement = Database.query(query);
+            return new PageElementDTO.BasePageElementDTO(pageelement);
         } catch (Exception ex) {
             throw new CustomException('Failed to find pageelement by ID: ' + ex.getMessage());
         }
+    }
+
+    private List<String> getAllFields(String objectName) {
+        List<String> fieldNames = new List<String>();
+        Map<String, Schema.SObjectField> fieldMap = Schema.getGlobalDescribe().get(objectName).getDescribe().fields.getMap();
+        for (String fieldName : fieldMap.keySet()) {
+            fieldNames.add(fieldName);
+        }
+        return fieldNames;
+    }
+
+    private List<String> getFieldsFromFieldSet(String objectName, String fieldSetName) {
+        List<String> fieldNames = new List<String>();
+        Schema.FieldSet fieldSet = Schema.getGlobalDescribe().get(objectName).getDescribe().fieldSets.getMap().get(fieldSetName);
+        for (Schema.FieldSetMember f : fieldSet.getFields()) {
+            fieldNames.add(f.getFieldPath());
+        }
+        return fieldNames;
     }
 }
