--- a/force-app/main/default/classes/PageRepository.cls
+++ b/force-app/main/default/classes/PageRepository.cls
@@ -59,10 +59,30 @@ public class PageRepository extends Repository {
 
     public PageDTO.BasePageDTO findPageById(Id pageId, String fieldSetName) {
         try {
-            PageDTO.BasePageDTO pageDto = new PageDTO.BasePageDTO(pageId, fieldSetName);
-            return pageDto;
+            List<String> fieldsToSelect = (fieldSetName == null) ? getAllFields('Page__c') : getFieldsFromFieldSet('Page__c', fieldSetName);
+            String query = 'SELECT ' + String.join(fieldsToSelect, ', ') + ' FROM Page__c WHERE Id = :pageId LIMIT 1';
+            Page__c page = Database.query(query);
+            return new PageDTO.BasePageDTO(page);
         } catch (Exception ex) {
             throw new CustomException('Failed to find page by ID: ' + ex.getMessage());
         }
+    }
+
+    private List<String> getAllFields(String objectName) {
+        List<String> fieldNames = new List<String>();
+        Map<String, Schema.SObjectField> fieldMap = Schema.getGlobalDescribe().get(objectName).getDescribe().fields.getMap();
+        for (String fieldName : fieldMap.keySet()) {
+            fieldNames.add(fieldName);
+        }
+        return fieldNames;
+    }
+
+    private List<String> getFieldsFromFieldSet(String objectName, String fieldSetName) {
+        List<String> fieldNames = new List<String>();
+        Schema.FieldSet fieldSet = Schema.getGlobalDescribe().get(objectName).getDescribe().fieldSets.getMap().get(fieldSetName);
+        for (Schema.FieldSetMember f : fieldSet.getFields()) {
+            fieldNames.add(f.getFieldPath());
+        }
+        return fieldNames;
     }
 }
