--- a/force-app/main/default/classes/SurveyDTO.cls
+++ b/force-app/main/default/classes/SurveyDTO.cls
@@ -1,5 +1,4 @@
 public class SurveyDTO {
-
     public virtual class BaseSurveyDTO {
         @AuraEnabled public Map<String, Object> fields { get; set; }
 
@@ -11,18 +10,6 @@ public class SurveyDTO {
         // Constructor that accepts a Survey__c object
         public BaseSurveyDTO(Survey__c survey) {
             this.fields = new Map<String, Object>();
-            Map<String, Object> surveyFields = survey.getPopulatedFieldsAsMap();
-            for (String fieldName : surveyFields.keySet()) {
-                this.fields.put(fieldName, surveyFields.get(fieldName));
-            }
-        }
-
-        // Constructor with fieldSetName
-        public BaseSurveyDTO(Id surveyId, String fieldSetName) {
-            this.fields = new Map<String, Object>();
-            List<String> fieldsToSelect = (fieldSetName == null) ? getAllFields('Survey__c') : getFieldsFromFieldSet('Survey__c', fieldSetName);
-            String query = 'SELECT ' + String.join(fieldsToSelect, ', ') + ' FROM Survey__c WHERE Id = :surveyId LIMIT 1';
-            Survey__c survey = Database.query(query);
             Map<String, Object> surveyFields = survey.getPopulatedFieldsAsMap();
             for (String fieldName : surveyFields.keySet()) {
                 this.fields.put(fieldName, surveyFields.get(fieldName));
@@ -41,7 +28,7 @@ public class SurveyDTO {
 
     public class CreateSurveyDTO extends BaseSurveyDTO {
         public CreateSurveyDTO() {
-            super(null, null);  // This will fetch all fields since no field set is specified
+            super();
         }
     }
 
@@ -49,7 +36,7 @@ public class SurveyDTO {
         @AuraEnabled public Id id { get; set; }
 
         public UpdateSurveyDTO() {
-            super(null, null);  // This will fetch all fields since no field set is specified
+            super();
         }
 
         // Include the Survey ID when updating
@@ -58,25 +45,5 @@ public class SurveyDTO {
             survey.Id = this.id;
             return survey;
         }
-    }
-
-    // Helper method to get all fields for an object
-    private static List<String> getAllFields(String objectName) {
-        List<String> fieldNames = new List<String>();
-        Map<String, Schema.SObjectField> fieldMap = Schema.getGlobalDescribe().get(objectName).getDescribe().fields.getMap();
-        for (String fieldName : fieldMap.keySet()) {
-            fieldNames.add(fieldName);
-        }
-        return fieldNames;
-    }
-
-    // Helper method to get fields from the Field Set
-    private static List<String> getFieldsFromFieldSet(String objectName, String fieldSetName) {
-        List<String> fieldNames = new List<String>();
-        Schema.FieldSet fieldSet = Schema.getGlobalDescribe().get(objectName).getDescribe().fieldSets.getMap().get(fieldSetName);
-        for (Schema.FieldSetMember f : fieldSet.getFields()) {
-            fieldNames.add(f.getFieldPath());
-        }
-        return fieldNames;
     }
 }
