--- a/force-app/main/default/classes/SurveyResponseRepository.cls
+++ b/force-app/main/default/classes/SurveyResponseRepository.cls
@@ -59,10 +59,30 @@ public class SurveyResponseRepository extends Repository {
 
     public SurveyResponseDTO.BaseSurveyResponseDTO findSurveyResponseById(Id surveyresponseId, String fieldSetName) {
         try {
-            SurveyResponseDTO.BaseSurveyResponseDTO surveyresponseDto = new SurveyResponseDTO.BaseSurveyResponseDTO(surveyresponseId, fieldSetName);
-            return surveyresponseDto;
+            List<String> fieldsToSelect = (fieldSetName == null) ? getAllFields('SurveyResponse__c') : getFieldsFromFieldSet('SurveyResponse__c', fieldSetName);
+            String query = 'SELECT ' + String.join(fieldsToSelect, ', ') + ' FROM SurveyResponse__c WHERE Id = :surveyresponseId LIMIT 1';
+            SurveyResponse__c surveyresponse = Database.query(query);
+            return new SurveyResponseDTO.BaseSurveyResponseDTO(surveyresponse);
         } catch (Exception ex) {
             throw new CustomException('Failed to find surveyresponse by ID: ' + ex.getMessage());
         }
+    }
+
+    private List<String> getAllFields(String objectName) {
+        List<String> fieldNames = new List<String>();
+        Map<String, Schema.SObjectField> fieldMap = Schema.getGlobalDescribe().get(objectName).getDescribe().fields.getMap();
+        for (String fieldName : fieldMap.keySet()) {
+            fieldNames.add(fieldName);
+        }
+        return fieldNames;
+    }
+
+    private List<String> getFieldsFromFieldSet(String objectName, String fieldSetName) {
+        List<String> fieldNames = new List<String>();
+        Schema.FieldSet fieldSet = Schema.getGlobalDescribe().get(objectName).getDescribe().fieldSets.getMap().get(fieldSetName);
+        for (Schema.FieldSetMember f : fieldSet.getFields()) {
+            fieldNames.add(f.getFieldPath());
+        }
+        return fieldNames;
     }
 }
