--- a/force-app/main/default/classes/PageDTO.cls
+++ b/force-app/main/default/classes/PageDTO.cls
@@ -17,18 +17,6 @@ public class PageDTO {
             }
         }
 
-        // Constructor with fieldSetName
-        public BasePageDTO(Id pageId, String fieldSetName) {
-            this.fields = new Map<String, Object>();
-            List<String> fieldsToSelect = (fieldSetName == null) ? getAllFields('Page__c') : getFieldsFromFieldSet('Page__c', fieldSetName);
-            String query = 'SELECT ' + String.join(fieldsToSelect, ', ') + ' FROM Page__c WHERE Id = :pageId LIMIT 1';
-            Page__c page = Database.query(query);
-            Map<String, Object> pageFields = page.getPopulatedFieldsAsMap();
-            for (String fieldName : pageFields.keySet()) {
-                this.fields.put(fieldName, pageFields.get(fieldName));
-            }
-        }
-
         // Converts DTO to Page__c
         public virtual Page__c toPage() {
             Page__c page = new Page__c();
@@ -41,7 +29,7 @@ public class PageDTO {
 
     public class CreatePageDTO extends BasePageDTO {
         public CreatePageDTO() {
-            super(null, null);  // This will fetch all fields since no field set is specified
+            super();
         }
     }
 
@@ -49,7 +37,7 @@ public class PageDTO {
         @AuraEnabled public Id id { get; set; }
 
         public UpdatePageDTO() {
-            super(null, null);  // This will fetch all fields since no field set is specified
+            super();
         }
 
         // Include the Page ID when updating
@@ -58,25 +46,5 @@ public class PageDTO {
             page.Id = this.id;
             return page;
         }
-    }
-
-    // Helper method to get all fields for an object
-    private static List<String> getAllFields(String objectName) {
-        List<String> fieldNames = new List<String>();
-        Map<String, Schema.SObjectField> fieldMap = Schema.getGlobalDescribe().get(objectName).getDescribe().fields.getMap();
-        for (String fieldName : fieldMap.keySet()) {
-            fieldNames.add(fieldName);
-        }
-        return fieldNames;
-    }
-
-    // Helper method to get fields from the Field Set
-    private static List<String> getFieldsFromFieldSet(String objectName, String fieldSetName) {
-        List<String> fieldNames = new List<String>();
-        Schema.FieldSet fieldSet = Schema.getGlobalDescribe().get(objectName).getDescribe().fieldSets.getMap().get(fieldSetName);
-        for (Schema.FieldSetMember f : fieldSet.getFields()) {
-            fieldNames.add(f.getFieldPath());
-        }
-        return fieldNames;
     }
 }
