--- a/force-app/main/default/classes/SurveyService.cls
+++ b/force-app/main/default/classes/SurveyService.cls
@@ -1,68 +1,67 @@
 public with sharing class SurveyService {
-    public static String createJsonFromRecords(Survey__c survey, List<SurveyVersion__c> versions, List<Page__c> pages, List<Element__c> elements) {
-        SurveyModel surveyModel = SurveyModel.fromRecord(survey);
-        surveyModel.versions = new List<SurveyVersionModel>();
-        
-        Map<Id, SurveyVersionModel> versionMap = new Map<Id, SurveyVersionModel>();
-        Map<Id, PageModel> pageMap = new Map<Id, PageModel>();
-        
-        for (SurveyVersion__c version : versions) {
-            SurveyVersionModel versionModel = SurveyVersionModel.fromRecord(version);
-            versionModel.pages = new List<PageModel>();
-            versionMap.put(version.Id, versionModel);
-            surveyModel.versions.add(versionModel);
-        }
-        
-        for (Page__c page : pages) {
-            PageModel pageModel = PageModel.fromRecord(page);
-            pageModel.elements = new List<ElementModel>();
-            pageMap.put(page.Id, pageModel);
-            versionMap.get(page.SurveyVersion__c).pages.add(pageModel);
-        }
-        
-        for (Element__c element : elements) {
-            ElementModel elementModel = ElementModel.fromRecord(element);
-            pageMap.get(element.Page__c).elements.add(elementModel);
-        }
-        
-        return JSON.serialize(surveyModel);
-    }
-    
     public static void createRecordsFromJson(String jsonInput) {
-        SurveyModel surveyModel = (SurveyModel)JSON.deserialize(jsonInput, SurveyModel.class);
-        
-        Survey__c survey = surveyModel.toRecord();
-        upsert survey;
-        
-        List<SurveyVersion__c> versions = new List<SurveyVersion__c>();
-        List<Page__c> pages = new List<Page__c>();
-        List<Element__c> elements = new List<Element__c>();
-        
-        for (SurveyVersionModel versionModel : surveyModel.versions) {
-            SurveyVersion__c version = versionModel.toRecord();
-            version.Survey__c = survey.Id;
-            versions.add(version);
-        }
-        upsert versions;
-        
-        for (SurveyVersionModel versionModel : surveyModel.versions) {
-            for (PageModel pageModel : versionModel.pages) {
-                Page__c page = pageModel.toRecord();
-                page.SurveyVersion__c = versionModel.id;
-                pages.add(page);
+        try {
+            // Deserialize the JSON input into a Map
+            Map<String, Object> surveyData = (Map<String, Object>) JSON.deserializeUntyped(jsonInput);
+            
+            // Create Survey record
+            Survey__c survey = new Survey__c(
+                Name = 'Survey from JSON'
+            );
+            insert survey;
+            
+            // Create SurveyVersion record
+            SurveyVersion__c version = new SurveyVersion__c(
+                Survey__c = survey.Id,
+                VersionNumber__c = '1.0',
+                Status__c = 'Draft',
+                Body__c = jsonInput
+            );
+            insert version;
+            
+            // Create Page records
+            List<Page__c> pages = new List<Page__c>();
+            List<Object> pagesData = (List<Object>) surveyData.get('pages');
+            if (pagesData != null) {
+                for (Integer i = 0; i < pagesData.size(); i++) {
+                    Map<String, Object> pageData = (Map<String, Object>) pagesData[i];
+                    pages.add(new Page__c(
+                        SurveyVersion__c = version.Id,
+                        Name = (String) pageData.get('name'),
+                        Sequence__c = i + 1,
+                        Body__c = JSON.serialize(pageData)
+                    ));
+                }
+                insert pages;
             }
-        }
-        upsert pages;
-        
-        for (SurveyVersionModel versionModel : surveyModel.versions) {
-            for (PageModel pageModel : versionModel.pages) {
-                for (ElementModel elementModel : pageModel.elements) {
-                    Element__c element = elementModel.toRecord();
-                    element.Page__c = pageModel.id;
-                    elements.add(element);
+            
+            // Create Element records
+            List<Element__c> elements = new List<Element__c>();
+            for (Integer i = 0; i < pages.size(); i++) {
+                Map<String, Object> pageData = (Map<String, Object>) pagesData[i];
+                List<Object> elementsData = (List<Object>) pageData.get('elements');
+                if (elementsData != null) {
+                    for (Integer j = 0; j < elementsData.size(); j++) {
+                        Map<String, Object> elementData = (Map<String, Object>) elementsData[j];
+                        elements.add(new Element__c(
+                            Page__c = pages[i].Id,
+                            Name = (String) elementData.get('name'),
+                            Sequence__c = j + 1,
+                            Body__c = JSON.serialize(elementData)
+                        ));
+                    }
                 }
             }
+            if (!elements.isEmpty()) {
+                insert elements;
+            }
+            
+            System.debug('Survey created successfully. Survey Id: ' + survey.Id);
+            System.debug('Number of pages created: ' + pages.size());
+            System.debug('Number of elements created: ' + elements.size());
+        } catch (Exception e) {
+            System.debug('Error creating records from JSON: ' + e.getMessage());
+            System.debug('Stack trace: ' + e.getStackTraceString());
         }
-        upsert elements;
     }
 }
